# lirashield

./: .gitignore  README.md  TODO.md  analysis.py  app.py  database.py  portfolio.db  pyproject.toml  tefas_fetcher.py
adapters/: __init__.py  tefas.py  yfinance_stocks.py
core/: __init__.py  analysis.py  config.py  database.py  log.py
lirashield/: __init__.py  __main__.py  app.py
services/: __init__.py  analysis.py  charts.py  fifo.py  portfolio.py  rates.py
tests/: __init__.py  conftest.py  test_tefas.py  test_yfinance_stocks.py
ui/: __init__.py  interface.py
ui/handlers/: __init__.py  analysis.py  charts.py  rates.py  refresh.py  transactions.py
