[project]
name = "lirashield"
version = "0.1.0"
description = "LiraShield - Track portfolio returns adjusted for inflation using CPI/USD benchmarks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.0.0",
    "pandas>=2.0.0",
    "plotly>=6.5.2",
    "pydantic-settings>=2.12.0",
    "tefas-crawler>=0.5.0",
    "yfinance>=0.2.0",
]

[project.scripts]
lirashield-run = "lirashield:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["lirashield", "core", "services", "adapters", "ui"]
module-root = ""
namespace = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
